--- a/MDK-ARM/AZRTOS_ThreadX.uvprojx
+++ b/MDK-ARM/AZRTOS_ThreadX.uvprojx
@@ -433,6 +433,16 @@
               <FileType>1</FileType>
               <FilePath>..\AZURE_RTOS\User_App\LEDTask.c</FilePath>
             </File>
+            <File>
+              <FileName>IDLE.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\AZURE_RTOS\User_App\IDLE.c</FilePath>
+            </File>
+            <File>
+              <FileName>SYSTASK.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\AZURE_RTOS\User_App\SYSTASK.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
